--- a/src/ECommerce.API/appsettings.Production.json
+++ b/src/ECommerce.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ecommerce;Username=postgres;Password=dev123"
+    "DefaultConnection": "Host=ep-bitter-heart-a1fstxow-pooler.ap-southeast-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_DuZ63vKLnYzH;SSL Mode=Require"
   },
   "Logging": {
     "LogLevel": {
