🎨 FRONTEND: Configure for production deployment
✅ Frontend deployment setup:
- Updated appsettings.json: Point to deployed API URL
- Updated appsettings.Production.json: Production API endpoint
- Updated Program.cs: Production URL binding (0.0.0.0:PORT)
- Updated render.yaml: Added frontend service configuration

🔗 API Integration:
- Frontend connects to: https://ecommerce-assignment-qe180214.onrender.com/api
- Production ready configuration
- Environment-specific settings

Ready to deploy Frontend to Render.com!

--- a/render.yaml
+++ b/render.yaml
@@ -14,3 +14,17 @@ services:
         value: Production
       - key: DATABASE_CONNECTION_STRING
         sync: false  # This will be set manually in Render dashboard
+
+  - type: web
+    name: ecommerce-web-qe180214
+    env: docker
+    dockerfilePath: ./src/ECommerce.Web/Dockerfile
+    repo: https://github.com/tsohigh254/ecommerce-assignment-qe180214.git
+    branch: main
+    region: singapore
+    plan: free
+    buildCommand: ""
+    startCommand: ""
+    envVars:
+      - key: ASPNETCORE_ENVIRONMENT
+        value: Production
