--- a/src/ECommerce.Web/appsettings.json
+++ b/src/ECommerce.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiBaseUrl": "https://localhost:7246/api",
+  "ApiBaseUrl": "https://ecommerce-assignment-qe180214.onrender.com/api",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
