Security: Remove sensitive data and optimize documentation

--- a/src/ECommerce.Web/appsettings.json
+++ b/src/ECommerce.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiBaseUrl": "https://ecommerce-assignment-qe180214.onrender.com/api",
+  "ApiBaseUrl": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
