--- a/src/ECommerce.API/appsettings.json
+++ b/src/ECommerce.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ecommerce;Username=postgres;Password=dev123"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
