feat: Complete E-Commerce app with Auth, Cart, Orders & Stripe Payment
✨ Features Implemented:
• User Authentication (JWT-based Register/Login)
• Product Management (CRUD with image upload)
• Shopping Cart System
• Order Management
• Stripe Payment Integration
• Stripe Webhook Auto-Update Payment Status

🔧 Backend (API):
- Auth, Cart, Orders, Payment, Webhook Controllers
- Stripe Payment Service with webhook handling
- Image upload service (Cloudinary)
- JWT token authentication
- Automatic payment status updates via webhook

🎨 Frontend (Web):
- Register/Login pages
- Product list, details, create/edit
- Shopping cart with quantity management
- Stripe Checkout with payment form
- Order history and order details
- Payment success/failed pages

💾 Database:
- User, Product, Cart, Order models
- Entity relationships configured
- Payment tracking fields

📝 Documentation:
- Setup and testing guide
- Webhook testing script
- Environment variables template

--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,29 @@ WEB_PORT=5173
 # ASP.NET Core Environment
 ASPNETCORE_ENV=Development
 
+# Stripe Payment Configuration (REQUIRED for payment features)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# How to get Stripe keys:
+# 1. Go to https://dashboard.stripe.com/test/apikeys
+# 2. Copy Publishable key (pk_test_...)
+# 3. Copy Secret key (sk_test_...)
+# 4. For webhook secret, run: stripe listen --forward-to http://localhost:8080/api/webhook/stripe
+# 5. Copy the webhook secret (whsec_...) from the output
+
+# Cloudinary Image Upload Configuration (OPTIONAL)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
 # ============================================================================
 # NOTES:
 # - For local development, these default values are sufficient
 # - For production, use your hosting platform's environment variables
 # - Never commit .env file to version control
 # - Change DB_PASSWORD to a strong password for production use
+# - Stripe keys are REQUIRED for checkout and payment features
+# - Webhook secret is REQUIRED for automatic payment status updates
 # ============================================================================
