--- a/src/ECommerce.API/appsettings.Template.json
+++ b/src/ECommerce.API/appsettings.Template.json
@@ -2,6 +2,24 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=your_host;Database=your_database;Username=your_username;Password=your_password"
   },
+  "JwtSettings": {
+    "SecretKey": "your_jwt_secret_key_here",
+    "Issuer": "ECommerceAPI",
+    "Audience": "ECommerceWebApp",
+    "ExpirationInMinutes": 60
+  },
+  "StripeSettings": {
+    "SecretKey": "sk_test_your_stripe_secret_key",
+    "PublishableKey": "pk_test_your_stripe_publishable_key",
+    "WebhookSecret": "whsec_your_webhook_signing_secret",
+    "Currency": "usd",
+    "TestMode": true
+  },
+  "CloudinarySettings": {
+    "CloudName": "your-cloud-name",
+    "ApiKey": "your-api-key",
+    "ApiSecret": "your-api-secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
