--- a/src/ECommerce.API/appsettings.json
+++ b/src/ECommerce.API/appsettings.json
@@ -1,6 +1,23 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Database=ecommerce;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyForJWTAuthentication12345",
+    "Issuer": "ECommerceAPI",
+    "Audience": "ECommerceWebApp",
+    "ExpirationInMinutes": 60
+  },
+  "StripeSettings": {
+    "SecretKey": "your-stripe-secret-key",
+    "PublishableKey": "your-stripe-publishable-key",
+    "Currency": "usd",
+    "TestMode": true
+  },
+  "CloudinarySettings": {
+    "CloudName": "your-cloud-name",
+    "ApiKey": "your-api-key",
+    "ApiSecret": "your-api-secret"
   },
   "Logging": {
     "LogLevel": {
