--- a/src/ECommerce.Web/appsettings.json
+++ b/src/ECommerce.Web/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "ApiBaseUrl": "",
+  "ApiSettings": {
+    "BaseUrl": "http://api:8080"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
