--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 # ============================================================================
-# Docker Compose Configuration for Local Development
+# E-Commerce Assignment - QE180214
+# Docker Compose Configuration
 # ============================================================================
-# ⚠️  SECURITY NOTICE:
-# This configuration uses environment variables for sensitive data.
-# Default values are provided for convenience but can be overridden.
+# 
+# CHỈ EXPOSE 1 PORT DUY NHẤT: 5173 (Web Application)
 #
 # USAGE:
-#   1. Copy .env.example to .env (if not exists)
-#   2. Modify .env with your local settings (optional)
-#   3. Run: docker-compose up -d
+#   docker-compose up -d
+#   
+# ACCESS:
+#   http://localhost:5173
 #
-# For production deployment, use platform-specific environment variables
-# (Render.com, AWS, Azure, etc.) - DO NOT use this file in production.
+# ARCHITECTURE:
+#   - Web App (Port 5173) ← User truy cập
+#   - API (Internal) ← Web app gọi
+#   - PostgreSQL (Internal) ← API gọi
+#
 # ============================================================================
 
 version: '3.8'
@@ -35,14 +39,15 @@ services:
       timeout: 5s
       retries: 5
 
-  # E-Commerce API
+  # E-Commerce API (Internal only - không expose port ra ngoài)
   api:
     build:
       context: .
       dockerfile: src/ECommerce.API/Dockerfile
     container_name: ecommerce-api-dev
-    ports:
-      - "${API_PORT:-7246}:8080"
+    # Port chỉ dùng trong Docker network, không expose ra host
+    expose:
+      - "8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENV:-Development}
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=${DB_NAME:-ecommerce};Username=${DB_USER:-postgres};Password=${DB_PASSWORD:-postgres}
@@ -51,17 +56,17 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
-  # E-Commerce Web Frontend  
+  # E-Commerce Web Frontend (PORT DUY NHẤT RA NGOÀI)
   web:
     build:
       context: .
       dockerfile: src/ECommerce.Web/Dockerfile
     container_name: ecommerce-web-dev
     ports:
-      - "${WEB_PORT:-5173}:8080"
+      - "5173:8080"  # CHỈ expose port 5173 duy nhất
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENV:-Development}
-      - ApiBaseUrl=http://api:8080/api
+      - ApiSettings__BaseUrl=http://api:8080
     depends_on:
       - api
     restart: unless-stopped
