Clean up: Remove redundant test scripts and markdown files, keep only essential docs

--- a/src/ECommerce.API/appsettings.Production.json
+++ b/src/ECommerce.API/appsettings.Production.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "AllowedOrigins": [
+    "https://ecommerce-web-qe180214.onrender.com",
+    "https://www.ecommerce-web-qe180214.onrender.com"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
