fix: optimize Dockerfiles for Render free tier (512MB RAM limit) - use Alpine Linux - add memory constraints - disable diagnostics

--- a/src/ECommerce.API/Dockerfile
+++ b/src/ECommerce.API/Dockerfile
@@ -1,9 +1,15 @@
-# Dockerfile for ECommerce.API
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+# Dockerfile for ECommerce.API - Optimized for Render Free Tier
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 WORKDIR /app
 EXPOSE 8080
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+# Set environment variables to reduce memory usage
+ENV DOTNET_EnableDiagnostics=0
+ENV DOTNET_GCHeapHardLimit=50000000
+ENV COMPlus_GCHeapHardLimit=50000000
+ENV DOTNET_gcServer=0
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 WORKDIR /src
 
 # Copy project files
@@ -21,14 +27,17 @@ WORKDIR "/src/src/ECommerce.API"
 RUN dotnet build "ECommerce.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "ECommerce.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "ECommerce.API.csproj" -c Release -o /app/publish \
+    /p:UseAppHost=false \
+    /p:PublishTrimmed=false \
+    /p:PublishSingleFile=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
-# Create a non-root user
-RUN adduser --disabled-password --gecos '' appuser && chown -R appuser /app
+# Create a non-root user (Alpine uses addgroup/adduser)
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup && chown -R appuser:appgroup /app
 USER appuser
 
 ENTRYPOINT ["dotnet", "ECommerce.API.dll"]
