Fix URI parsing errors by correcting API configuration
- Fix appsettings.Production.json: change ApiBaseUrl to ApiSettings.BaseUrl
- Update API URL to use correct base URL without /api suffix
- Add API_BASE_URL environment variable to render.yaml for web service
- Update all services to prioritize API_BASE_URL env var over config
- Ensure consistent configuration handling across AccountController, CartService, OrderService, and PaymentService

--- a/render.yaml
+++ b/render.yaml
@@ -28,3 +28,5 @@ services:
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
         value: Production
+      - key: API_BASE_URL
+        value: https://ecommerce-api-qe180214.onrender.com
