--- a/src/ECommerce.Web/appsettings.Production.json
+++ b/src/ECommerce.Web/appsettings.Production.json
@@ -1,5 +1,7 @@
 {
-  "ApiBaseUrl": "https://ecommerce-assignment-qe180214.onrender.com/api",
+  "ApiSettings": {
+    "BaseUrl": "https://ecommerce-api-qe180214.onrender.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
