--- a/src/ECommerce.API/appsettings.Production.json
+++ b/src/ECommerce.API/appsettings.Production.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "Redis": ""
   },
   "AllowedOrigins": [
     "https://ecommerce-web-qe180214.onrender.com",
