--- a/src/ECommerce.API/appsettings.json
+++ b/src/ECommerce.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ecommerce;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=ecommerce;Username=postgres;Password=postgres",
+    "Redis": "redis:6379"
   },
   "JwtSettings": {
     "SecretKey": "YourSuperSecretKeyForJWTAuthentication12345",
