--- a/src/ECommerce.Web/appsettings.Production.json
+++ b/src/ECommerce.Web/appsettings.Production.json
@@ -2,6 +2,9 @@
   "ApiSettings": {
     "BaseUrl": "https://ecommerce-assignment-qe180214.onrender.com"
   },
+  "ConnectionStrings": {
+    "Redis": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
