--- a/src/ECommerce.Web/appsettings.json
+++ b/src/ECommerce.Web/appsettings.json
@@ -2,6 +2,9 @@
   "ApiSettings": {
     "BaseUrl": "http://api:8080"
   },
+  "ConnectionStrings": {
+    "Redis": "redis:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
