--- a/src/ECommerce.API/appsettings.json
+++ b/src/ECommerce.API/appsettings.json
@@ -12,6 +12,7 @@
   "StripeSettings": {
     "SecretKey": "your-stripe-secret-key",
     "PublishableKey": "your-stripe-publishable-key",
+    "WebhookSecret": "",
     "Currency": "usd",
     "TestMode": true
   },
